syntax = "proto3";
package com.example.grpc;

option java_multiple_files = true;

message RpcRequest {

  int32 firstValue = 1;

  int32 lastValue = 2;

}

message RpcResponse {

  int32 currentValue = 1;

}

service Service {
  rpc greeting(RpcRequest) returns (stream RpcResponse);
}